sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: ')' expected but 'for' found.
		for ( i <- 0 to getNombreValeurs()-2) {
                ^AlgBubbleSort1:13: error: 'while' expected but ')' found.
	)
        ^AlgBubbleSort1:15: error: '(' expected but '}' found.
}
^